# paper-display-calendar

./: Cargo.toml
examples/: events_today.rs  future_events.rs
src/: lib.rs
