[package]
name = "calendar"
version = "0.1.0"
authors = ["Marek Miettinen <marek.miettinen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ical = "0.5.0"
chrono = "0.4.9"
reqwest = {version = "0.9.20", features=["rustls-tls"]}