[package]
name = "calendar"
version = "0.1.0"
authors = ["Marek Miettinen <marek.miettinen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ical = "0.8.0"
chrono = "0.4.26"
chrono-tz = "0.8.3"
reqwest = {version = "0.11.18", default-features=false, features=["rustls-tls", "blocking"]}
